Fixed actions alignment

--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -24,6 +24,10 @@
     align-items: center;
 }
 
+.actions{
+    margin-left: auto;
+}
+
 .x{
     user-select: none;
     cursor: pointer;
